Update: Fixed margin consistency on smaller screens

--- a/exampleSite/public/css/main.css
+++ b/exampleSite/public/css/main.css
@@ -254,19 +254,20 @@ ul.sidebar-link li {
     margin-right: 0;
     padding: 10px;
   }
-
-  .sidebar, .copyright, .post-content, .post-title, .post-time {
-    font-size: small;
-  }
   
   .code-wrapper {
     height: auto;
-    width: 90vw;
+    width: 85vw;
     margin: auto;
     max-width: 100%;
     max-height: 100%;
     overflow-x: auto;
     overflow-y: auto;
-    margin: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .post-content {
+    word-break: break-all;
   }
 }
